# wasm-overhead-research

./: .gitignore  .mise.toml  LICENSE  Makefile  README.md  benchmark.js  go.mod  measure-gzipped-sizes.js  measure-sizes.sh  package.json  simple-benchmark.js  test-wasmer.sh  testHelpers.ts  transformData.test.ts  vitest.config.ts
docs/: BINARY_SIZES.md  FINAL_WASMER_SUMMARY.md  JAVY_WASMER_ANALYSIS.md  WASMER_COMPATIBILITY.md
implementations/assemblyscript/: adapter.js  asconfig.json  package.json  test.js
implementations/assemblyscript/assembly/: index.ts
implementations/basic/: main.go
implementations/goja/: main.go
implementations/javy/: javy-adapter.js  javy-wasmer-test.sh  transform.js
implementations/porffor/: porffor-adapter.js  porffor-wasmer-test.sh  transform-simple.js  transform.js
implementations/quickjs/: Cargo.toml  build-optimized.sh  quickjs-adapter.js  quickjs-test.js  quickjs-wasi-adapter.js  quickjs-wasi-test.js  quickjs-wasmer-test.sh  rust-adapter.js  rust-test.js  transform.js
implementations/quickjs/pkg-wasi/: quickjs_transform.js
implementations/quickjs/src/: lib.rs  main.rs
results/: benchmark-summary.csv  engine-overhead.csv  size-comparison.csv
runtimes/: README.md  measure_all.sh
runtimes/extism/go/: go.mod
runtimes/extism/python/: main.py  measure.py  requirements.txt
runtimes/extism/typescript/: package.json
runtimes/results/: extism_python.json  summary.json  wasmer_go.json  wasmer_python.json  wasmer_typescript.json
runtimes/test-modules/: README.md  build.sh  build_simple.sh  create_test_modules.py  wasi_hello.c
runtimes/test-modules/extism_echo/: Cargo.toml
runtimes/wasmer/go/: baseline.go  go.mod  main.go  measure.sh  test_binary
runtimes/wasmer/python/: baseline.py  main.py  measure.py
(+5 files in other folders)
