[package]
name = "quickjs-transform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quickjs_transform"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6", features = ["bindgen"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link time optimization
lto = true
# Strip debug symbols
strip = true
# Panic strategy for smaller binary size
panic = "abort"
