[package]
name = "quickjs-transform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quickjs_transform"
path = "src/main.rs"

[dependencies]
rquickjs = { version = "0.6", default-features = false, features = ["bindgen"] }

[profile.release]
# Tell `rustc` to optimize for smallest code size.
opt-level = "z"
# Enable thin link time optimization for better size
lto = "thin"
# Strip debug symbols
strip = true
# Panic strategy for smaller binary size
panic = "abort"
# Additional size optimizations
codegen-units = 1
# Reduce binary bloat
overflow-checks = false
